=========== 0.3.2 ============
- Fix crash from combat encounter with Symbiotic Void Creatures
- Fix RipperDoc bar encounter being weird
- Fix ripping bionic and core not removing the core
=========== 0.3.1 ============
- Fix typo for bar event.
- Fix crash related to Nex string helper.
=========== 0.3.0 ============
- Overhaul backend logistic. (I should have done it earlier)
- New obtainable item: Blind Entry.
- New bar event for bionic buying with just a slight price increase.
- New console command for find bionic stations - ba_findBionicStations
- Reworked BRM
  - Officer/Admin now always start at BRM tier 1, BRM capacity of 7
  - Each tier increase will increase BRM capacity by 6
  - To increase BRM tier, go to Academy
- More configurations related to BRM.
- Adjust overclock UI.
- Added codex unlockable bionic entry.
- Fix bug related to assigning AI core to automated ship after assigning player to the ship.
- Fix bug related to overclocking when remainder Evoshards count is 0.
- Fix inventory UI flashing when hovering
=========== 0.2.6 (0.98 Game version change) ============
- Update to 0.98
=========== 0.2.5 (Save compatible) ============
- Fix crash related to bionic condition when loading into save with deciv market again (pls work ;-;).
=========== 0.2.4 (Save compatible) ============
- Fix crash related to bionic condition when loading into save with deciv market.
=========== 0.2.3 (Save compatible) ============
- Fix crash related to bionic station generation returning null.
=========== 0.2.2 (Not sure if save compatible) ============
- Fix crash related to market condition being weird. (I still don't know why its weird but ok)
=========== 0.2.1 (Save compatible) ============
- Fix crash from Bionic condition on market. Thanks to alaricdragon and null for helping me!
- Change spamming error for officer without a default variant. (Now its a warning)
=========== 0.2.0 (NOT compatible) ============
- gammar/beta core as overclocking material