@@ -3,7 +3,7 @@
 	"name":"Bionic Alteration", # Displayed to the player
 	"author":"PigeonPun",
     "utility":"false",
-    "version": { "major":"0", "minor": "3", "patch": "2" },
+    "version": { "major":"0", "minor": "3", "patch": "3" },
 	"description":"Modify and fight against foe with bionics",
     "gameVersion": "0.98a-RC7",
   	"jars":["jars/bionicalteration.jar"],
